Add camera calibration

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -28,48 +28,78 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import os.path\n",
     "import cv2\n",
     "import glob\n",
+    "import pickle\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib qt\n",
+    "import matplotlib.image as mpimg\n",
     "\n",
-    "# prepare object points, like (0,0,0), (1,0,0), (2,0,0) ....,(6,5,0)\n",
-    "objp = np.zeros((6*9,3), np.float32)\n",
-    "objp[:,:2] = np.mgrid[0:9,0:6].T.reshape(-1,2)\n",
+    "DISTORT_P = 'distort.p'\n",
     "\n",
-    "# Arrays to store object points and image points from all the images.\n",
-    "objpoints = [] # 3d points in real world space\n",
-    "imgpoints = [] # 2d points in image plane.\n",
+    "is_show_calibration_result = False\n",
     "\n",
     "# Make a list of calibration images\n",
     "images = glob.glob('../camera_cal/calibration*.jpg')\n",
     "\n",
-    "# Step through the list and search for chessboard corners\n",
-    "for fname in images:\n",
-    "    img = cv2.imread(fname)\n",
-    "    gray = cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
+    "if not os.path.isfile(DISTORT_P):\n",
+    "    # prepare object points, like (0,0,0), (1,0,0), (2,0,0) ....,(6,5,0)\n",
+    "    objp = np.zeros((6*9,3), np.float32)\n",
+    "    objp[:,:2] = np.mgrid[0:9,0:6].T.reshape(-1,2)\n",
     "\n",
-    "    # Find the chessboard corners\n",
-    "    ret, corners = cv2.findChessboardCorners(gray, (9,6),None)\n",
+    "    # Arrays to store object points and image points from all the images.\n",
+    "    objpoints = [] # 3d points in real world space\n",
+    "    imgpoints = [] # 2d points in image plane.\n",
     "\n",
-    "    # If found, add object points, image points\n",
-    "    if ret == True:\n",
-    "        objpoints.append(objp)\n",
-    "        imgpoints.append(corners)\n",
+    "    # Step through the list and search for chessboard corners\n",
+    "    for fname in images:\n",
+    "        img = cv2.imread(fname)\n",
+    "        gray = cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
     "\n",
-    "        # Draw and display the corners\n",
-    "        img = cv2.drawChessboardCorners(img, (9,6), corners, ret)\n",
-    "        cv2.imshow('img',img)\n",
-    "        cv2.waitKey(500)\n",
+    "        # Find the chessboard corners\n",
+    "        ret, corners = cv2.findChessboardCorners(gray, (9,6),None)\n",
     "\n",
-    "cv2.destroyAllWindows()"
+    "        # If found, add object points, image points\n",
+    "        if ret == True:\n",
+    "            objpoints.append(objp)\n",
+    "            imgpoints.append(corners)\n",
+    "\n",
+    "    ret, mtx, dist, rvecs, tvecs = cv2.calibrateCamera(objpoints, imgpoints, gray.shape[::-1],None,None)\n",
+    "\n",
+    "    data = {'mtx': mtx,\n",
+    "            'dist': dist}\n",
+    "\n",
+    "    with open(DISTORT_P, 'wb') as output:\n",
+    "        pickle.dump(data, output)\n",
+    "else:\n",
+    "    dist_pickle = pickle.load(open(DISTORT_P, \"rb\"))\n",
+    "    mtx = dist_pickle[\"mtx\"]\n",
+    "    dist = dist_pickle[\"dist\"]\n",
+    "\n",
+    "if is_show_calibration_result:\n",
+    "    for fname in images:\n",
+    "        img = mpimg.imread(fname)\n",
+    "\n",
+    "        dst = cv2.undistort(img, mtx, dist, None, mtx)\n",
+    "\n",
+    "        plt.figure(figsize=(16, 12))\n",
+    "        plt.subplot(121)\n",
+    "        plt.imshow(img)\n",
+    "        plt.title('Before')\n",
+    "        plt.axis('off')\n",
+    "        plt.subplot(122)\n",
+    "        plt.imshow(dst)\n",
+    "        plt.title('After')\n",
+    "        plt.axis('off')\n",
+    "        plt.show()"
    ]
   },
   {
