Add perspective transform

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -103,25 +103,54 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "## And so on and so forth..."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "mid = 1280/2\n",
+    "t1, b1 = 450, 700\n",
+    "t_tw = 45\n",
+    "t_bw = 410\n",
+    "t2, b2 = 10, 720\n",
+    "tw = 360\n",
+    "\n",
+    "src = np.float32([[mid-t_tw, t1], [mid+t_tw, t1], [mid-t_bw, b1], [mid+t_bw, b1]])\n",
+    "dst = np.float32([[mid-tw, t2], [mid+tw, t2], [mid-tw, b2], [mid+tw, b2]])\n",
+    "\n",
+    "M = cv2.getPerspectiveTransform(src, dst)\n",
+    "\n",
+    "images = glob.glob('../test_images/*.jpg')\n",
+    "for fname in images:\n",
+    "    img = mpimg.imread(fname)\n",
+    "\n",
+    "    undist = cv2.undistort(img, mtx, dist, None, mtx)\n",
+    "\n",
+    "    warped = cv2.warpPerspective(img, M, (img.shape[1], img.shape[0]), flags=cv2.INTER_LINEAR)\n",
+    "    \n",
+    "    plt.figure(figsize=(16, 12))\n",
+    "    plt.subplot(121)\n",
+    "    plt.imshow(undist)\n",
+    "    plt.plot(mid-t_tw, t1, 'o', mew=2)\n",
+    "    plt.plot(mid+t_tw, t1, 'v', mew=2)\n",
+    "    plt.plot(mid-t_bw, b1, 'x', mew=2)\n",
+    "    plt.plot(mid+t_bw, b1, 's', mew=2)\n",
+    "\n",
+    "    plt.plot(mid-tw, t2, 'o', mew=4)\n",
+    "    plt.plot(mid+tw, t2, 'v', mew=4)\n",
+    "    plt.plot(mid-tw, b2, 'x', mew=4)\n",
+    "    plt.plot(mid+tw, b2, 's', mew=4)\n",
+    "    \n",
+    "    plt.title('Before')\n",
+    "    plt.subplot(122)\n",
+    "    plt.imshow(warped)\n",
+    "    plt.title('Perspective transform')\n",
+    "    plt.axis('off')\n",
+    "    plt.show()"
+   ]
   }
  ],
  "metadata": {
