complete til threshold stage

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -36,8 +36,7 @@
    "source": [
     "from ipywidgets import interact, interactive, fixed\n",
     "from IPython.core.display import display, HTML\n",
-    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
-    "\n"
+    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
    ]
   },
   {
@@ -62,10 +61,13 @@
     "DISTORT_P = 'distort.p'\n",
     "\n",
     "is_show_calibration_result = False\n",
+    "is_show_perspective_transform_result = True\n",
+    "is_show_color_threshold_result = False\n",
     "\n",
     "# Make a list of calibration images\n",
     "images = glob.glob('../camera_cal/calibration*.jpg')\n",
     "\n",
+    "# If the calibration file doesn't exist, generate it!\n",
     "if not os.path.isfile(DISTORT_P):\n",
     "    # prepare object points, like (0,0,0), (1,0,0), (2,0,0) ....,(6,5,0)\n",
     "    objp = np.zeros((6*9,3), np.float32)\n",
@@ -120,6 +122,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Decide the perspective tranform matrix"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -130,49 +139,49 @@
    },
    "outputs": [],
    "source": [
-    "mid = 1280/2\n",
-    "t1, b1 = 450, 700\n",
-    "t_tw = 90\n",
-    "t_bw = 820\n",
-    "t2, b2 = 10, 720\n",
-    "tw = 400\n",
+    "mid = 1280/2         # mid line\n",
+    "t1, b1 = 450, 700    # src top, bottom\n",
+    "t_tw, t_bw = 90, 820 # trapezoid top, bottom\n",
+    "t2, b2 = 10, 720     # dst top, bottom\n",
+    "tw = 620             # dst width\n",
     "\n",
     "src = np.float32([[mid-t_tw, t1], [mid+t_tw, t1], [mid-t_bw, b1], [mid+t_bw, b1]])\n",
     "dst = np.float32([[mid-tw, t2], [mid+tw, t2], [mid-tw, b2], [mid+tw, b2]])\n",
     "\n",
     "M = cv2.getPerspectiveTransform(src, dst)\n",
     "\n",
-    "images = glob.glob('../test_images/*.jpg')\n",
-    "for fname in images:\n",
-    "    img = mpimg.imread(fname)\n",
+    "if is_show_perspective_transform_result:\n",
+    "    images = glob.glob('../test_images/*.jpg')\n",
+    "    for fname in images:\n",
+    "        img = mpimg.imread(fname)\n",
     "\n",
-    "    undist = cv2.undistort(img, mtx, dist, None, mtx)\n",
+    "        undist = cv2.undistort(img, mtx, dist, None, mtx)\n",
     "\n",
-    "    warped = cv2.warpPerspective(img, M, (img.shape[1], img.shape[0]), flags=cv2.INTER_LINEAR)\n",
-    "    \n",
-    "    fig = plt.figure(figsize=(20, 12))\n",
-    "    plt.subplot(121)\n",
-    "    plt.imshow(undist)\n",
-    "    \n",
-    "    plt.plot(640, 420, 'o', mew=1)\n",
-    "    \n",
-    "    plt.plot(mid-t_tw, t1, '^', mew=2)\n",
-    "    plt.plot(mid+t_tw, t1, 'v', mew=2)\n",
-    "    plt.plot(mid-t_bw, b1, 'x', mew=2)\n",
-    "    plt.plot(mid+t_bw, b1, 's', mew=2)\n",
+    "        warped = cv2.warpPerspective(undist, M, (undist.shape[1], undist.shape[0]), flags=cv2.INTER_LINEAR)\n",
     "\n",
-    "    plt.plot(mid-tw, t2, '^', mew=4)\n",
-    "    plt.plot(mid+tw, t2, 'v', mew=4)\n",
-    "    plt.plot(mid-tw, b2, 'x', mew=4)\n",
-    "    plt.plot(mid+tw, b2, 's', mew=4)\n",
-    "    \n",
-    "    plt.title('Before('+fname+')')\n",
-    "    plt.subplot(122)\n",
-    "    plt.imshow(warped)\n",
-    "    plt.title('Perspective transform')\n",
-    "    plt.axis('off')\n",
-    "    fig.tight_layout()\n",
-    "    plt.show()"
+    "        fig = plt.figure(figsize=(20, 12))\n",
+    "        plt.subplot(121)\n",
+    "        plt.imshow(undist)\n",
+    "\n",
+    "        plt.plot(640, 420, 'o', mew=1)\n",
+    "\n",
+    "        plt.plot(mid-t_tw, t1, '^', mew=2)\n",
+    "        plt.plot(mid+t_tw, t1, 'v', mew=2)\n",
+    "        plt.plot(mid-t_bw, b1, 'x', mew=2)\n",
+    "        plt.plot(mid+t_bw, b1, 's', mew=2)\n",
+    "\n",
+    "        plt.plot(mid-tw, t2, '^', mew=4)\n",
+    "        plt.plot(mid+tw, t2, 'v', mew=4)\n",
+    "        plt.plot(mid-tw, b2, 'x', mew=4)\n",
+    "        plt.plot(mid+tw, b2, 's', mew=4)\n",
+    "\n",
+    "        plt.title('Before('+fname+')')\n",
+    "        plt.subplot(122)\n",
+    "        plt.imshow(warped)\n",
+    "        plt.title('Perspective transform')\n",
+    "        plt.axis('off')\n",
+    "        fig.tight_layout()\n",
+    "        plt.show()"
    ]
   },
   {
@@ -193,53 +202,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "img = cv2.imread('../test_images/test5.jpg')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "hls = cv2.cvtColor(img, cv2.COLOR_BGR2HLS)\n",
-    "hsv = cv2.cvtColor(img, cv2.COLOR_BGR2HSV)\n",
-    "gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "S = hls[:, :, 2]\n",
-    "\n",
-    "# thresh = (90, 255)\n",
-    "# channel = np.zeros_like(S)\n",
-    "# channel[(S > thresh[0]) & (S <= thresh[1])] = 1\n",
-    "def u2(t_min=0, t_max=255):\n",
-    "    channel = np.zeros_like(S)\n",
-    "    channel[(S > t_min) & (S <= t_max)] = 1\n",
-    "    plt.figure(figsize=(16, 12))\n",
-    "    plt.imshow(channel, cmap='gray')\n",
-    "    plt.show()\n",
-    "\n",
-    "interact(u2, t_min=(0, 255), t_max=(0,255))"
+    "def thresh_filter(s, thresh=(0, 255)):\n",
+    "    binary_output = np.zeros_like(s)\n",
+    "    binary_output[(s > thresh[0]) & (s <= thresh[1])] = 1\n",
+    "    return binary_output"
    ]
   },
   {
@@ -254,7 +224,7 @@
    "source": [
     "# Define a function that takes an image, gradient orientation,\n",
     "# and threshold min / max values.\n",
-    "def abs_sobel_thresh(channel, orient='x', sobel_kernel=3, abs_sobel_thresh_min=0, abs_sobel_thresh_max=255):\n",
+    "def abs_sobel_thresh(channel, orient='x', abs_sobel_thresh_min=0, abs_sobel_thresh_max=255):\n",
     "    # Convert to grayscale\n",
     "#     gray = cv2.cvtColor(img, cv2.COLOR_RGB2GRAY)\n",
     "    # Apply x or y gradient with the OpenCV Sobel() function\n",
@@ -274,6 +244,96 @@
     "\n",
     "    # Return the result\n",
     "    return binary_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "if is_show_color_threshold_result:\n",
+    "    images = glob.glob('../test_images/*.jpg')\n",
+    "    for fname in images:\n",
+    "        img = mpimg.imread(fname)\n",
+    "\n",
+    "        undist = cv2.undistort(img, mtx, dist, None, mtx)\n",
+    "\n",
+    "        hls = cv2.cvtColor(undist, cv2.COLOR_RGB2HLS)\n",
+    "        s = hls[:, :, 2]\n",
+    "        s_binary = thresh_filter(s, (170, 255))\n",
+    "\n",
+    "        gray = cv2.cvtColor(undist, cv2.COLOR_RGB2GRAY)\n",
+    "        sxbinary = abs_sobel_thresh(gray, 'x', 20, 100)\n",
+    "\n",
+    "        color_binary = np.dstack(( np.zeros_like(s_binary), sxbinary*200, s_binary*200))\n",
+    "        # Combine the two binary thresholds\n",
+    "        combined_binary = np.zeros_like(sxbinary)\n",
+    "        combined_binary[(s_binary == 1) | (sxbinary == 1)] = 1\n",
+    "\n",
+    "\n",
+    "        fig = plt.figure(figsize=(20, 12))\n",
+    "\n",
+    "        plt.subplot(121)\n",
+    "        plt.imshow(color_binary)\n",
+    "        plt.title('color ('+fname+')')\n",
+    "\n",
+    "        plt.subplot(122)\n",
+    "        plt.imshow(combined_binary, cmap='gray')\n",
+    "        plt.title('combined')\n",
+    "\n",
+    "\n",
+    "        plt.axis('off')\n",
+    "        fig.tight_layout()\n",
+    "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "images = glob.glob('../test_images/*.jpg')\n",
+    "for fname in images:\n",
+    "    img = mpimg.imread(fname)\n",
+    "\n",
+    "    undist = cv2.undistort(img, mtx, dist, None, mtx)\n",
+    "\n",
+    "    hls = cv2.cvtColor(undist, cv2.COLOR_RGB2HLS)\n",
+    "    s = hls[:, :, 2]\n",
+    "    s_binary = thresh_filter(s, (170, 255))\n",
+    "\n",
+    "    gray = cv2.cvtColor(undist, cv2.COLOR_RGB2GRAY)\n",
+    "    sxbinary = abs_sobel_thresh(gray, 'x', 20, 100)\n",
+    "\n",
+    "    #color_binary = np.dstack(( np.zeros_like(s_binary), sxbinary*200, s_binary*200))\n",
+    "    # Combine the two binary thresholds\n",
+    "    combined_binary = np.zeros_like(sxbinary)\n",
+    "    combined_binary[(s_binary == 1) | (sxbinary == 1)] = 1\n",
+    "\n",
+    "    warped = cv2.warpPerspective(combined_binary, M, (combined_binary.shape[1], combined_binary.shape[0]), flags=cv2.INTER_LINEAR)\n",
+    "\n",
+    "    fig = plt.figure(figsize=(20, 12))\n",
+    "\n",
+    "    plt.subplot(121)\n",
+    "    plt.imshow(combined_binary, cmap='gray')\n",
+    "    plt.title('combined ('+fname+')')\n",
+    "\n",
+    "    plt.subplot(122)\n",
+    "    plt.imshow(warped, cmap='gray')\n",
+    "    plt.title('warped')\n",
+    "\n",
+    "\n",
+    "#     plt.axis('off')\n",
+    "    fig.tight_layout()\n",
+    "    plt.show()"
    ]
   },
   {
@@ -338,7 +398,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -539,25 +601,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.3"
-  },
-  "widgets": {
-   "state": {
-    "159d3784df11456182b520683c515c89": {
-     "views": [
-      {
-       "cell_index": 7
-      }
-     ]
-    },
-    "ef0df53e5d714d14b425192429bdc96a": {
-     "views": [
-      {
-       "cell_index": 12
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
   }
  },
  "nbformat": 4,
