--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -59,7 +59,8 @@
     "sys.path.append('../')\n",
     "from utils import build_distort_p, load_distort_p, get_perspective_transform, s_filter, sobel_filter, combine_binaries, draw_result\n",
     "from showcase import show_calibration_result, show_perspective_transform_result, show_color_threshold_result, show_filtered_warped_image\n",
-    "from poly import fit_poly, fit_poly_vis"
+    "from poly import fit_poly\n",
+    "from line import Line"
    ]
   },
   {
@@ -225,9 +226,9 @@
     "\n",
     "    binary_warped = cv2.warpPerspective(combined_binary, M, (combined_binary.shape[1], combined_binary.shape[0]), flags=cv2.INTER_LINEAR)\n",
     "\n",
-    "    left_fit, right_fit = fit_poly(binary_warped)\n",
-    "    \n",
-    "    fit_poly_vis(binary_warped, left_fit, right_fit)\n",
+    "    left_fit, right_fit, _ = fit_poly(binary_warped)\n",
+    "\n",
+    "#     fit_poly_vis(binary_warped, left_fit, right_fit)\n",
     "\n",
     "#     print(left_fit, right_fit)\n",
     "    \n",
@@ -278,7 +279,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -296,18 +299,30 @@
    "outputs": [],
    "source": [
     "def process_image(image):\n",
+    "\n",
     "    undist = cv2.undistort(image, mtx, dist, None, mtx)\n",
     "\n",
+    "    # Make lane lines obvious\n",
     "    s_binary = s_filter(undist)\n",
     "    sxbinary = sobel_filter(undist)\n",
     "    combined_binary = combine_binaries(s_binary, sxbinary)\n",
     "\n",
+    "    # Perspective transform to bird view\n",
     "    binary_warped = cv2.warpPerspective(combined_binary, M, (combined_binary.shape[1], combined_binary.shape[0]), flags=cv2.INTER_LINEAR)\n",
     "\n",
-    "    left_fit, right_fit = fit_poly(binary_warped)\n",
-    "\n",
-    "    overlay_img = draw_result(undist, binary_warped, left_fit, right_fit, Minv)\n",
-    "\n",
+    "    # Get polynomial coefficients for left/right lanes\n",
+    "    left_fit, right_fit, out_img = fit_poly(binary_warped)\n",
+    "    \n",
+    "    # Calculate the curvature\n",
+    "    \n",
+    "    # Coloring the warped image\n",
+    "    \n",
+    "    # Apply Minv to untransform the colored image\n",
+    "    \n",
+    "    # Merge two images\n",
+    "    overlay_img = draw_result(undist, binary_warped, out_img, left_fit, right_fit, Minv)\n",
+    "    \n",
+    "    # Add text info\n",
     "    font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "    cv2.putText(overlay_img,'Radius of Curvature = 744(m)',(20,60), font, 2, (255,255,255),2,cv2.LINE_AA)\n",
     "    cv2.putText(overlay_img,'Vehicle is 0.21m left of center',(20,120), font, 2, (255,255,255),2,cv2.LINE_AA)\n",
@@ -319,7 +334,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -333,7 +350,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -348,7 +367,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
