--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -78,7 +78,7 @@
     "is_show_calibration_result = False\n",
     "is_show_perspective_transform_result = False\n",
     "is_show_color_threshold_result = False\n",
-    "is_show_filtered_warped_image = False"
+    "is_show_filtered_warped_image = True"
    ]
   },
   {
@@ -203,6 +203,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## Test filters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "lanelines = [Line(), Line()]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -213,38 +236,71 @@
    },
    "outputs": [],
    "source": [
-    "images = glob.glob('../test_images/*.jpg')\n",
+    "images = glob.glob('../project_frames/frame054*.jpg')\n",
     "\n",
-    "for fname in images:\n",
-    "    img = mpimg.imread(fname)\n",
-    "\n",
+    "for file in images:\n",
+    "    img = cv2.imread(file)\n",
+    "    img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+    "    \n",
     "    undist = cv2.undistort(img, mtx, dist, None, mtx)\n",
-    "\n",
+    "    \n",
     "    s_binary = s_filter(undist)\n",
     "    sxbinary = sobel_filter(undist)\n",
     "    combined_binary = combine_binaries(s_binary, sxbinary)\n",
     "\n",
     "    binary_warped = cv2.warpPerspective(combined_binary, M, (combined_binary.shape[1], combined_binary.shape[0]), flags=cv2.INTER_LINEAR)\n",
+    "    color_warp = np.zeros_like(img)\n",
     "\n",
-    "    left_fit, right_fit, _ = fit_poly(binary_warped)\n",
+    "    fit_poly(binary_warped, lanelines)\n",
+    "        \n",
+    "    # Coloring the warped image\n",
+    "    color_warp[lanelines[0].ally, lanelines[0].allx] = [255, 0, 0] # Left lane\n",
+    "    color_warp[lanelines[1].ally, lanelines[1].allx] = [0, 0, 255] # Right lane\n",
     "\n",
-    "#     fit_poly_vis(binary_warped, left_fit, right_fit)\n",
-    "\n",
-    "#     print(left_fit, right_fit)\n",
+    "    ploty = np.linspace(0, binary_warped.shape[0]-1, binary_warped.shape[0] )\n",
+    "    # Recast the x and y points into usable format for cv2.fillPoly()\n",
     "    \n",
-    "#     fig = plt.figure(figsize=(20, 12))\n",
+    "    pts_left = np.array([np.transpose(np.vstack([lanelines[0].recent_xfitted, ploty]))])\n",
+    "    pts_right = np.array([np.flipud(np.transpose(np.vstack([lanelines[1].recent_xfitted, ploty])))])\n",
+    "    pts = np.hstack((pts_left, pts_right))\n",
     "\n",
-    "#     plt.subplot(121)\n",
-    "#     plt.imshow(combined_binary, cmap='gray')\n",
-    "#     plt.title('combined ('+fname+')')\n",
+    "    # Draw the lane onto the warped blank image\n",
+    "    cv2.fillPoly(color_warp, np.int_([pts]), (0,255, 0))\n",
     "\n",
-    "#     plt.subplot(122)\n",
-    "#     plt.imshow(warped, cmap='gray')\n",
-    "#     plt.title('warped')\n",
+    "    # Warp the blank back to original image space using inverse perspective matrix (Minv)\n",
+    "    newwarp = cv2.warpPerspective(color_warp, Minv, (img.shape[1], img.shape[0])) \n",
+    "    # Combine the result with the original image\n",
+    "    result = cv2.addWeighted(undist, 1, newwarp, 0.3, 0)\n",
+    "    \n",
+    "    # Apply Minv to untransform the colored image\n",
+    "    newwarp = cv2.warpPerspective(color_warp, Minv, (img.shape[1], img.shape[0])) \n",
     "\n",
-    "#     plt.axis('off')\n",
-    "#     fig.tight_layout()\n",
-    "#     plt.show()"
+    "    overlay_img = cv2.addWeighted(undist, 1, newwarp, 0.3, 0)\n",
+    "    \n",
+    "    plt.figure(figsize=(20, 20))\n",
+    "    plt.subplot(321)\n",
+    "    plt.imshow(combined_binary, cmap='gray')\n",
+    "    plt.title(file)\n",
+    "    plt.subplot(322)\n",
+    "    plt.imshow(binary_warped, cmap='gray')\n",
+    "    plt.subplot(323)\n",
+    "    plt.imshow(color_warp)\n",
+    "    plt.subplot(324)\n",
+    "    plt.imshow(newwarp)\n",
+    "    plt.subplot(325)\n",
+    "    plt.imshow(overlay_img)\n",
+    "    \n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## Process video"
    ]
   },
   {
@@ -285,14 +341,15 @@
    },
    "outputs": [],
    "source": [
-    "# Define global variables here"
+    "# Define global variables here\n",
+    "lanelines = [Line(), Line()]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -309,23 +366,38 @@
     "\n",
     "    # Perspective transform to bird view\n",
     "    binary_warped = cv2.warpPerspective(combined_binary, M, (combined_binary.shape[1], combined_binary.shape[0]), flags=cv2.INTER_LINEAR)\n",
+    "    color_warp = np.zeros_like(img)\n",
     "\n",
     "    # Get polynomial coefficients for left/right lanes\n",
-    "    left_fit, right_fit, out_img = fit_poly(binary_warped)\n",
-    "    \n",
-    "    # Calculate the curvature\n",
-    "    \n",
+    "    fit_poly(binary_warped, lanelines)\n",
+    "        \n",
     "    # Coloring the warped image\n",
-    "    \n",
+    "    color_warp[lanelines[0].ally, lanelines[0].allx] = [255, 0, 0] # Left lane\n",
+    "    color_warp[lanelines[1].ally, lanelines[1].allx] = [0, 0, 255] # Right lane\n",
+    "\n",
+    "    ploty = np.linspace(0, binary_warped.shape[0]-1, binary_warped.shape[0] )\n",
+    "    # Recast the x and y points into usable format for cv2.fillPoly()    \n",
+    "    pts_left = np.array([np.transpose(np.vstack([lanelines[0].recent_xfitted, ploty]))])\n",
+    "    pts_right = np.array([np.flipud(np.transpose(np.vstack([lanelines[1].recent_xfitted, ploty])))])\n",
+    "    pts = np.hstack((pts_left, pts_right))\n",
+    "\n",
+    "    # Draw the lane onto the warped blank image\n",
+    "    cv2.fillPoly(color_warp, np.int_([pts]), (0,255, 0))\n",
+    "\n",
     "    # Apply Minv to untransform the colored image\n",
+    "    newwarp = cv2.warpPerspective(color_warp, Minv, (image.shape[1], image.shape[0])) \n",
     "    \n",
     "    # Merge two images\n",
-    "    overlay_img = draw_result(undist, binary_warped, out_img, left_fit, right_fit, Minv)\n",
-    "    \n",
+    "    overlay_img = cv2.addWeighted(undist, 1, newwarp, 0.3, 0)\n",
+    "\n",
     "    # Add text info\n",
     "    font = cv2.FONT_HERSHEY_SIMPLEX\n",
-    "    cv2.putText(overlay_img,'Radius of Curvature = 744(m)',(20,60), font, 2, (255,255,255),2,cv2.LINE_AA)\n",
-    "    cv2.putText(overlay_img,'Vehicle is 0.21m left of center',(20,120), font, 2, (255,255,255),2,cv2.LINE_AA)\n",
+    "    cv2.putText(overlay_img,'Radius of Curvature = %d(m)' % lanelines[0].radius_of_curvature,(20,60), font, 2, (255,255,255),2,cv2.LINE_AA)\n",
+    "    mid = (lanelines[0].line_base_pos + lanelines[1].line_base_pos)/2.0\n",
+    "    if lanelines[0].line_base_pos >= lanelines[1].line_base_pos:\n",
+    "        cv2.putText(overlay_img,'Vehicle is %2.2fm right of center' % (lanelines[0].line_base_pos-mid),(20,120), font, 2, (255,255,255),2,cv2.LINE_AA)\n",
+    "    else:\n",
+    "        cv2.putText(overlay_img,'Vehicle is %2.2fm left of center' % (lanelines[1].line_base_pos-mid),(20,120), font, 2, (255,255,255),2,cv2.LINE_AA)\n",
     "    \n",
     "    return overlay_img"
    ]
@@ -334,13 +406,34 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
-    "output = 'output.mp4'\n",
+    "cur_frame = 0\n",
+    "def save_image(image):\n",
+    "    global cur_frame\n",
+    "    if cur_frame % 12 == 0:\n",
+    "        img = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
+    "        cv2.imwrite('frame%04d.jpg' % cur_frame, img)\n",
+    "    cur_frame += 1\n",
+    "    return image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "output = '../output_images/output.mp4'\n",
     "clip1 = VideoFileClip('../project_video.mp4')\n",
     "clip = clip1.fl_image(process_image)\n",
     "%time clip.write_videofile(output, audio=False)"
@@ -362,17 +455,6 @@
     "</video>\n",
     "\"\"\".format(output))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
